fix(#831): readFile() function should repl. dynamic content when encod. base64
- Adjusted file.txt
  - to only contain constant expressions (currentDate())
  - Removed newLine to support testing on windows